[package]
name = "lain_upload"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
async-trait = "0.1.89"
chrono = "0.4.42"
futures-util = "0.3.31"
infer = "0.19.0"
sanitize-filename = "0.6.0"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.47.1"
